# MyApplication2

./: CMakeLists.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MyGLRenderer.cpp  MyGLRenderer.h  native-lib.cpp
app/src/main/java/com/example/test/: CubeActivity.java  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
